# scorep_binding_python

./: .gitignore  CMakeLists.txt  README.md  setup.py  todo.md
cmake/: FindScorep.cmake
example/: python_tracing.sh
scorep/: __main__.py  helper.py
src/: scorep.cpp
